refactored Attributes to perform CRUD via database